--- a/templates/base.html
+++ b/templates/base.html
@@ -8,8 +8,7 @@
 		<title>sdk's cool website</title>
 		<meta name="description" content="sum projects n stuff">
 
-		<base href="http://localhost:7878">
-<!--		<base href="https://mndco11age.xyz">-->
+		<base href="https://mndco11age.xyz">
 
 		<link rel="icon" href="static/favicons/favicon.ico">
 		<link rel="stylesheet" href="static/style.css">
