--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
 		<title>NICK'S COOL WEBSITE</title>
 		<meta name="description" content="sum projects n stuff">
 
-		<base href="https://mndco11age.xyz">
+		<base href="{{ BASE_URL }}">
 
 		<link rel="icon" href="static/favicons/favicon.ico">
 		<link rel="stylesheet" href="static/style.css">
