--- a/templates/index.html
+++ b/templates/index.html
@@ -13,7 +13,7 @@
 		<li><a href="https://www.instagram.com/breitnw/" target="_blank">INSTA</a></li>
 	</ul>
 	<p>
-		btw logo is meowth because hes cool and objectively the best pokemon i made that in
+		logo is meowth because hes cool and objectively the best pokemon i made that in
 		illustrator for graphic and product design
 	</p>
 	<br>
