--- a/templates/base.html
+++ b/templates/base.html
@@ -21,12 +21,11 @@
 
         <img src="static/images/madotsuki.webp" id="mado" alt="mado gif">
 
-<!--		<footer>-->
-<!--			<p>-->
-<!--				this website runs on rust! check out the source > <a href="https://github.com/breitnw/mndco11age" target="_blank">here</a> <-->
-<!--				&emsp;|&emsp;-->
-<!--				2023 <a href="https://github.com/breitnw" target="_blank">breitnw</a>-->
-<!--			</p>-->
-<!--		</footer>-->
+		<footer>
+			<a href="https://github.com/breitnw/mndco11age" target="_blank" class="no-underline">
+				<img class="icon" src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" alt="github icon">
+			</a>
+			<span>2023 breitnw</span>
+		</footer>
 	</body>
 </html>
