--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 
 {% block contents %}
 	<img src="static/images/meowth-180-crop.png" id="logo" alt="logo">
-	<h1>Welcome to my website :)</h1>
+	<h1>NICK'S COOL WEBSITE</h1>
 	<p>
 		there's not much here yet... here are some links you can look at
 		in the meantime if you want, there might be cool stuff there ↴
@@ -13,14 +13,12 @@
 		<li><a href="https://www.instagram.com/breitnw/" target="_blank">INSTA</a></li>
 	</ul>
 	<p>
-		logo is meowth because hes cool and objectively the best pokemon i made that in
-		illustrator for graphic and product design
+		logo is meowth because hes cool and objectively the best pokemon. my greatest accomplishment of
+		taking graphic & product design
 	</p>
 	<br>
-	<br>
-	<br>
 	<p style="font-size: small">
-		oh and also this shit runs on rust now suck it
+		also this shit runs on rust now suck it
 	</p>
 <!--	<div id="folders" class="mono">-->
 <!--		<div style="left: 0rem; top: 2rem;">-->
