hard-coded project cards (demo)

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,25 +1,95 @@
 {% extends 'base.html' %}
 
 {% block contents %}
-	<img src="static/images/meowth-180-crop.png" id="logo" alt="logo">
-	<h1>NICK'S COOL WEBSITE</h1>
-	<p>
-		there's not much here yet... here are some links you can look at
-		in the meantime if you want, there might be cool stuff there ↴
-	</p>
-	<ul>
-		<li><a href="https://github.com/breitnw" target="_blank">GITHUB</a></li>
-		<li><a href="https://twitter.com/_smsdk" target="_blank">TWT</a></li>
-		<li><a href="https://www.instagram.com/breitnw/" target="_blank">INSTA</a></li>
-	</ul>
-	<p>
-		logo is meowth because hes cool and objectively the best pokemon. my greatest accomplishment of
-		taking graphic & product design
-	</p>
-	<br>
-	<p style="font-size: small">
-		also this shit runs on rust now suck it
-	</p>
+<img src="static/images/meowth-180-crop.png" id="logo" alt="logo">
+<h1>NICK'S COOL WEBSITE</h1>
+<p>
+	there's not much here yet... here are some links you can look at
+	in the meantime if you want, there might be cool stuff there ↴
+</p>
+<ul>
+	<li><a href="https://github.com/breitnw" target="_blank">GITHUB</a></li>
+	<li><a href="https://twitter.com/_smsdk" target="_blank">TWT</a></li>
+	<li><a href="https://www.instagram.com/breitnw/" target="_blank">INSTA</a></li>
+</ul>
+<p>
+	logo is meowth because hes cool and objectively the best pokemon. my greatest accomplishment of
+	taking graphic & product design
+</p>
+<br>
+<hr>
+<br>
+<div id="cards">
+	<div class="card-column">
+		<div class="card">
+			<img src="https://user-images.githubusercontent.com/29758429/210491738-b8defba2-e8f9-419f-a428-a89a1e326a55.gif" alt="Rhyolite">
+			<div class="container">
+				<h4><b>Rhyolite</b></h4>
+				<p>
+					A bare-bones rendering engine built with Vulkano (in-progress)
+				</p>
+			</div>
+		</div>
+		<div class="card">
+			<img src="https://user-images.githubusercontent.com/29758429/201558966-87f64e81-a6d5-4efb-a8cd-040bc6d40c5c.gif" alt="CommuniTree">
+			<div class="container">
+				<h4><b>CommuniTree</b></h4>
+				<p>
+					A social media platform encouraging environmental sustainability through healthy competition and social interaction.
+					Created by Parker Hitchcock, Katriana Trinh, and Nick Breitling for Tonka Hacks 2022
+				</p>
+			</div>
+		</div>
+	</div>
+	<div class="card-column">
+		<div class="card">
+			<img src="https://user-images.githubusercontent.com/29758429/210676224-7c595c26-bee1-4359-b41a-eeaf79173818.gif" alt="micromusic">
+			<div class="container">
+				<h4><b>micromusic</b></h4>
+				<p>
+					A tiny miniplayer for Apple Music written in Rust with SDL2
+				</p>
+			</div>
+		</div>
+		<div class="card">
+			<img src="static/images/yotsubato-guruguru.gif" alt="test">
+			<div class="container">
+				<h4><b>placeholder :P</b></h4>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi at mauris eget lorem lobortis
+					vehicula. Sed rhoncus augue quis massa fringilla, vitae porta est auctor.
+				</p>
+			</div>
+		</div>
+	</div>
+	<div class="card-column">
+		<div class="card">
+			<img src="https://github.com/breitnw/ha_project/blob/master/resources/demo.gif?raw=true" alt="test">
+			<div class="container">
+				<h4><b>ha_project</b></h4>
+				<p>
+					Utilities to aid in data management for The Humanity Alliance, a Minnesota-based 501(c)(3) non-profit
+					that aspires to create long-lasting community value.
+				</p>
+			</div>
+		</div>
+		<div class="card">
+			<img src="static/images/yotsubato-guruguru.gif" alt="test">
+			<div class="container">
+				<h4><b>placeholder :P</b></h4>
+				<p>
+					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi at mauris eget lorem lobortis
+					vehicula. Sed rhoncus augue quis massa fringilla, vitae porta est auctor.
+				</p>
+			</div>
+		</div>
+	</div>
+</div>
+<br>
+<p style="font-size: small">
+	also this shit runs on rust now suck it
+</p>
+
 <!--	<div id="folders" class="mono">-->
 <!--		<div style="left: 0rem; top: 2rem;">-->
 <!--			<a href="empty">-->
