--- a/static/style.css
+++ b/static/style.css
@@ -24,6 +24,12 @@ body {
     bottom: 0;
 }
 
+hr {
+    border-width: 1px;
+    border-color: darkgray;
+    border-style: dotted;
+}
+
 #folders > div {
     position: relative;
     display: inline-block;
@@ -62,4 +68,53 @@ footer {
     position: fixed;
     font-size: small;
     text-align: center;
+}
+
+/* CARDS */
+#cards {
+    display: flex;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 10px;
+
+}
+
+.card-column {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: flex-start;
+    gap: 10px;
+    flex: 1;
+    min-width: 12rem;
+}
+
+.card {
+    /* Add shadows to create the "card" effect */
+    width: 100%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    transition: 0.3s;
+    background-color: whitesmoke;
+}
+
+.card > img {
+    width: inherit;
+}
+
+/* On mouse-over, add a deeper shadow */
+.card:hover {
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+}
+
+/* Add some padding inside the card container */
+.container {
+    padding: 2px 16px;
+}
+
+.container > h4 {
+    margin: 0.5em 0;
+}
+
+.container > p {
+    margin-top: 0;
 }
