Links, responsive UI, etc.

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
 
 		<footer>
 			<a href="https://github.com/breitnw/mndco11age" target="_blank" class="no-underline">
-				<img class="icon" src="https://upload.wikimedia.org/wikipedia/commons/9/91/Octicons-mark-github.svg" alt="github icon">
+				<img class="icon" src="static/icons/github.svg" alt="github icon">
 			</a>
 			<span>2023 breitnw</span>
 		</footer>
