--- a/static/style.css
+++ b/static/style.css
@@ -60,14 +60,18 @@ hr {
 }
 
 footer {
-    bottom: 0;
-    right: 0;
-    padding: 0 1em 0 1em;
-    margin-right: 0.5em;
-    margin-bottom: 1em;
-    position: fixed;
+    margin: 1em;
     font-size: small;
     text-align: center;
+    /*color: darkgray;*/
+    filter: invert(66%) sepia(11%) saturate(81%) hue-rotate(21deg) brightness(89%) contrast(91%);}
+
+ul {
+    list-style-type: square;
+}
+
+li a:hover {
+    color: orangered;
 }
 
 /* CARDS */
@@ -93,8 +97,10 @@ footer {
     /* Add shadows to create the "card" effect */
     width: 100%;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    transition: 0.3s;
+    transition: 0.1s;
     background-color: whitesmoke;
+    text-decoration: none;
+    color: black;
 }
 
 .card > img {
@@ -103,7 +109,7 @@ footer {
 
 /* On mouse-over, add a deeper shadow */
 .card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.4);
 }
 
 /* Add some padding inside the card container */
