Added stuff to portfolio section

--- a/templates/index.html
+++ b/templates/index.html
@@ -56,6 +56,16 @@
 				</p>
 			</div>
 		</a>
+		<a class="card" href="https://github.com/breitnw/cellular_automata" target="_blank">
+			<img src="https://user-images.githubusercontent.com/29758429/235373802-33715efa-5e82-45c6-b4c2-8db8d3c58095.gif" alt="gatsby">
+			<div class="container">
+				<h4><b>gatsby</b></h4>
+				<p>
+					A clicker game based on the book The Great Gatsby, made collaboratively by Nick Breitling and Luke
+					Williams for our final AP Language & Composition project
+				</p>
+			</div>
+		</a>
 	</div>
 	<div class="card-column">
 		<a class="card" href="https://github.com/breitnw/micromusic" target="_blank">
@@ -67,20 +77,29 @@
 				</p>
 			</div>
 		</a>
-		<a class="card" href="http://endless.horse/" target="_blank">
-			<img src="static/images/yotsubato-guruguru.gif" alt="test">
+		<a class="card" href="https://github.com/breitnw/cellular_automata" target="_blank">
+			<img src="https://user-images.githubusercontent.com/29758429/235373305-7ccddf03-b6c0-4da8-b8db-6a57df2708ff.gif" alt="cellular_automata">
 			<div class="container">
-				<h4><b>placeholder :P</b></h4>
+				<h4><b>cellular_automata</b></h4>
 				<p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi at mauris eget lorem lobortis
-					vehicula. Sed rhoncus augue quis massa fringilla, vitae porta est auctor
+					A basic cellular automata simulator written in Java with JFrame (I didn't know how to use shaders when
+					I wrote this so it's pretty slow)
+				</p>
+			</div>
+		</a>
+		<a class="card" href="https://github.com/breitnw/checkers" target="_blank">
+			<img src="https://github.com/breitnw/checkers/raw/master/screenshots/normal.png?raw=true" alt="checkers">
+			<div class="container">
+				<h4><b>checkers</b></h4>
+				<p>
+					A terminal-playable version of checkers created for the 2022 AP CSP Create Task
 				</p>
 			</div>
 		</a>
 	</div>
 	<div class="card-column">
 		<a class="card" href="https://github.com/breitnw/ha_project" target="_blank">
-			<img src="https://github.com/breitnw/ha_project/blob/master/resources/demo.gif?raw=true" alt="test">
+			<img src="https://github.com/breitnw/ha_project/blob/master/resources/demo.gif?raw=true" alt="ha_project">
 			<div class="container">
 				<h4><b>ha_project</b></h4>
 				<p>
@@ -89,17 +108,27 @@
 				</p>
 			</div>
 		</a>
-		<a class="card" href="http://endless.horse/" target="_blank">
-			<img src="static/images/yotsubato-guruguru.gif" alt="test">
+		<a class="card" href="https://github.com/breitnw/game3" target="_blank">
+			<img src="https://user-images.githubusercontent.com/29758429/235372486-26871873-4f40-4151-a15f-93e7ecab3e9b.gif" alt="game3">
 			<div class="container">
-				<h4><b>placeholder :P</b></h4>
+				<h4><b>game3</b></h4>
 				<p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit. Morbi at mauris eget lorem lobortis
-					vehicula. Sed rhoncus augue quis massa fringilla, vitae porta est auctor
+					A little experiment from a while back, made in pygame
+				</p>
+			</div>
+		</a>
+		<a class="card" href="https://github.com/breitnw/mndco11age" target="_blank">
+			<img src="https://user-images.githubusercontent.com/29758429/235374116-df02f485-57c4-4ba5-a5a0-9c11937dbbd3.gif" alt="mndco11age">
+			<div class="container">
+				<h4><b>game3</b></h4>
+				<p>
+					The website you're looking at right now! Runs on a HTTPS server built (pretty much) from scratch
+					with Rust and OpenSSL
 				</p>
 			</div>
 		</a>
 	</div>
+
 </div>
 <br>
 <p style="font-size: small">
