--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,7 @@
 				</p>
 			</div>
 		</a>
-		<a class="card" href="https://github.com/breitnw/cellular_automata" target="_blank">
+		<a class="card" href="https://github.com/breitnw/gatsby" target="_blank">
 			<img src="https://user-images.githubusercontent.com/29758429/235373802-33715efa-5e82-45c6-b4c2-8db8d3c58095.gif" alt="gatsby">
 			<div class="container">
 				<h4><b>gatsby</b></h4>
