--- a/templates/index.html
+++ b/templates/index.html
@@ -32,6 +32,9 @@
 	it up in illustrator instead of doing my actual graphic design homework like
 	a real one
 </p>
+<p>
+	oh yeah and im gonna fix the image loading soon i know it sucks rn my b
+</p>
 <br>
 <hr>
 <br>
@@ -120,7 +123,7 @@
 		<a class="card" href="https://github.com/breitnw/mndco11age" target="_blank">
 			<img src="https://user-images.githubusercontent.com/29758429/235374116-df02f485-57c4-4ba5-a5a0-9c11937dbbd3.gif" alt="mndco11age">
 			<div class="container">
-				<h4><b>game3</b></h4>
+				<h4><b>mndco11age</b></h4>
 				<p>
 					The website you're looking at right now! Runs on a HTTPS server built (pretty much) from scratch
 					with Rust and OpenSSL
