--- a/templates/base.html
+++ b/templates/base.html
@@ -16,10 +16,32 @@
 
 	<body>
         <div id="contents">
+			<img src="static/images/logo.png" id="text-logo" alt="nick's cool website logo" width="500px">
+			<ul id="navbar">
+				<li class="page"><a href="/" class="no-underline">software</a></li>
+				<li class="page"><a href="music" class="no-underline">music</a></li>
+				<li class="page"><a href="blog" class="no-underline">blog</a></li>
+				<li class="page"><a href="guestbook" class="no-underline">guestbook</a></li>
+				<li class="social">
+					<a href="https://github.com/breitnw" target="_blank" class="no-underline">
+						<img class="icon" src="static/icons/github.svg" alt="GitHub icon">
+					</a>
+				</li>
+				<li class="social">
+					<a href="https://twitter.com/_smsdk" target="_blank" class="no-underline">
+						<img class="icon" src="static/icons/twitter.svg" alt="Twitter icon">
+					</a>
+				</li>
+				<li class="social">
+					<a href="https://www.instagram.com/breitnw/" target="_blank" class="no-underline">
+						<img class="icon" src="static/icons/instagram.svg" alt="Instagram icon">
+					</a>
+				</li>
+			</ul>
             {% block contents %}{% endblock %}
         </div>
 
-        <img src="static/images/madotsuki.webp" id="mado" alt="mado gif">
+<!--        <img src="static/images/madotsuki.webp" id="mado" alt="mado gif">-->
 
 		<footer>
 			<a href="https://github.com/breitnw/mndco11age" target="_blank" class="no-underline">
