Revamped design, tabs, etc

--- a/templates/404.html
+++ b/templates/404.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %}
 
+{% block title %}page not found | NICK'S COOL WEBSITE{% endblock %}
+
 {% block contents %}
-<p>/<a href="/">home</a>/404.html</p>
 <h1>404 :(</h1>
 <p>there's not really anything here at the moment</p>
-<!--<img src="static/images/yotsuba-koiwai-handshake.gif" width="100rem">-->
+<img src="static/images/yotsuba-koiwai-handshake.gif" width="100rem">
 {% endblock %}
