--- a/templates/music.html
+++ b/templates/music.html
@@ -1,5 +1,7 @@
 {% extends 'base.html' %}
 
+{% block title %}music | NICK'S COOL WEBSITE{% endblock %}
+
 {% block contents %}
 <p>
     i'm learning to produce music (to the extent i can validly say that considering
