--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 
-		<title>NICK'S COOL WEBSITE</title>
+		<title>{% block title %}{% endblock %}</title>
 		<meta name="description" content="sum projects n stuff">
 
 		<base href="{{ BASE_URL }}">
