proper date formatting

--- a/templates/blog-post.html
+++ b/templates/blog-post.html
@@ -4,6 +4,6 @@
 
 {% block contents %}
 <h1>{{ article.title }}</h1>
-<p style="color: gray"><i>{{ article.timestamp }}</i></p>
+<p style="color: gray"><i>{{ article.date }}</i></p>
 {{ article.html|safe }}
 {% endblock %}
