temporarily disabled music page

--- a/templates/music.html
+++ b/templates/music.html
@@ -3,26 +3,35 @@
 {% block title %}music | NICK'S COOL WEBSITE{% endblock %}
 
 {% block contents %}
+<!--<p>-->
+<!--    i'm learning to produce music (to the extent i can validly say that considering-->
+<!--    i've been at it intermittently for like the last 3 years) :,) take a listen to some-->
+<!--    demos here, all are free to use for whatever u want:-->
+<!--</p>-->
+
+<!--<p>[more will be added later this page is under construction]</p>-->
+
+<!--<div id="folders">-->
+<!--    <div style="left: 0rem; top: 0rem;">-->
+<!--        <a href="static/sounds/demo.ogg">-->
+<!--            <img src="static/images/icons/audio_crop.png">-->
+<!--        </a>-->
+<!--        <p>demo.ogg</p>-->
+<!--    </div>-->
+<!--    <div style="left: 4rem; top: 0rem;">-->
+<!--        <a href="static/sounds/identity.wav">-->
+<!--            <img src="static/images/icons/audio_crop.png">-->
+<!--        </a>-->
+<!--        <p>identity.wav</p>-->
+<!--    </div>-->
+<!--</div>-->
 <p>
-    i'm learning to produce music (to the extent i can validly say that considering
-    i've been at it intermittently for like the last 3 years) :,) take a listen to some
-    demos here, all are free to use for whatever u want:
+    this page is under construction
 </p>
-
-<p>[more will be added later this page is under construction]</p>
-
-<div id="folders">
-    <div style="left: 0rem; top: 0rem;">
-        <a href="static/sounds/demo.ogg">
-            <img src="static/images/icons/audio_crop.png">
-        </a>
-        <p>demo.ogg</p>
-    </div>
-    <div style="left: 4rem; top: 0rem;">
-        <a href="static/sounds/identity.wav">
-            <img src="static/images/icons/audio_crop.png">
-        </a>
-        <p>identity.wav</p>
-    </div>
-</div>
+<pre>
+    ____
+\  i | o|
+|>#######
+/(_______)
+</pre>
 {% endblock %}
