descriptions, twitter & og meta tags

--- a/templates/404.html
+++ b/templates/404.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}page not found | NICK'S COOL WEBSITE{% endblock %}
+{% block description %}there's not really anything here at the moment{% endblock %}
 
 {% block contents %}
 <h1>404 :(</h1>
