--- a/templates/blog-add.html
+++ b/templates/blog-add.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}add blog post{% endblock %}
+{% block description %}add a blog post{% endblock %}
 
 {% block contents %}
 <form method="post" action="blog-add">
