--- a/templates/blog.html
+++ b/templates/blog.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}blog | NICK'S COOL WEBSITE{% endblock %}
+{% block description %}some articles about human things written by a human for other humans{% endblock %}
 
 {% block contents %}
 {% for article in articles %}
