--- a/templates/guestbook.html
+++ b/templates/guestbook.html
@@ -1,6 +1,8 @@
 {% extends 'base.html' %}
 
 {% block title %}guestbook | NICK'S COOL WEBSITE{% endblock %}
+{% block description %}sign my guestbook! just be civil, don't make me remove anything please :'){% endblock %}
+
 
 {% block contents %}
 {% if sign_disabled %}
