--- a/templates/music.html
+++ b/templates/music.html
@@ -1,6 +1,9 @@
 {% extends 'base.html' %}
 
 {% block title %}music | NICK'S COOL WEBSITE{% endblock %}
+{% block description %}i'm learning to produce music (to the extent i can validly say that
+considering i've been at it intermittently for like the last 3 years) :,) take a listen to some
+demos here, all are free to use for whatever u want.{% endblock %}
 
 {% block contents %}
 <!--<p>-->
