--- a/templates/software.html
+++ b/templates/software.html
@@ -1,9 +1,12 @@
 {% extends 'base.html' %}
 
 {% block title %}software | NICK'S COOL WEBSITE{% endblock %}
+{% block description %}i do some software development and graphics research in my free
+time and for school (cs major @ neu). you can find some of my favorite projects i've done
+below. all are free and open source and on my github too if you're weird like me and wanna
+know how i made them.{% endblock %}
 
 {% block contents %}
-
 <p>
 	i do some software development and graphics research in my free time and for school
 	(cs major @ neu). you can find some of my favorite projects i've done below. all are
