--- a/templates/blog-post.html
+++ b/templates/blog-post.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block title %}{{article.title}}{% endblock %}
+{% block description %}{{article.preview}}{% endblock %}
 
 {% block contents %}
 <h1>{{ article.title }}</h1>
