changed to httparse for managing requests; in-progress

--- a/templates/guestbook.html
+++ b/templates/guestbook.html
@@ -11,7 +11,7 @@
 <p>
     sign my guestbook! just be civil, don't make me remove anything please :')
 </p>
-<form method="post">
+<form method="post" action="guestbook">
     <label for="name">name:</label>
     <input type="text" name="name" id="name">
     <input type="submit" value="sign">
