hopefully fixed twitter card image

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
 		<meta property="twitter:url" content="{{ BASE_URL }}{{ path }}">
 		<meta property="twitter:title" content="{{ self.title() }}">
 		<meta property="twitter:description" content="{{ self.description() }}">
-		<meta property="twitter:image" content="static/favicons/favicon-144-precomposed.png">
+		<meta property="twitter:image" content="{{ BASE_URL }}/static/favicons/favicon-144-precomposed.png">
 
 		<base href="{{ BASE_URL }}">
 
