--- a/templates/base.html
+++ b/templates/base.html
@@ -34,7 +34,9 @@
 
 	<body>
         <div id="contents">
-			<img src="static/images/logo.png" id="text-logo" alt="nick's cool website logo" width="500px">
+			<a href="/">
+				<img src="static/images/logo.png" id="text-logo" alt="nick's cool website logo" width="500px">
+			</a>
 			<nav>
 				<a href="javascript:void(0);" id="burger" onclick="toggleBurger()"><i id="burger-icon" class="fa fa-bars"></i></a>
 				<ul id="page-navbar">
@@ -46,17 +48,17 @@
 				<ul id="social-navbar">
 					<li>
 						<a href="https://github.com/breitnw" target="_blank" class="no-underline">
-							<img class="icon" src="static/icons/github.svg" alt="GitHub icon">
+							<i class="fa-brands fa-github-alt"></i>
 						</a>
 					</li>
 					<li>
 						<a href="https://twitter.com/_smsdk" target="_blank" class="no-underline">
-							<img class="icon" src="static/icons/twitter.svg" alt="Twitter icon">
+							<i class="fa-brands fa-twitter"></i>
 						</a>
 					</li>
 					<li>
 						<a href="https://www.instagram.com/breitnw/" target="_blank" class="no-underline">
-							<img class="icon" src="static/icons/instagram.svg" alt="Instagram icon">
+							<i class="fa-brands fa-instagram"></i>
 						</a>
 					</li>
 				</ul>
@@ -76,9 +78,8 @@
 
 		<footer>
 			<a href="https://github.com/breitnw/mndco11age" target="_blank" class="no-underline">
-				<img class="icon" src="static/icons/github.svg" alt="github icon">
+				<i class="fa-brands fa-github"></i> 2023 breitnw
 			</a>
-			<span>2023 breitnw</span>
 		</footer>
 
 		<script>
